[skip ci] fix btn-link alignment

--- a/app/assets/stylesheets/pages/issuable.scss
+++ b/app/assets/stylesheets/pages/issuable.scss
@@ -214,6 +214,10 @@
       }
     }
 
+    .assign-yourself .btn-link {
+      padding-left: 0;
+    }
+
     .bold {
       font-weight: 600;
     }
